# rvc-controller

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  notify-result.yml  system-tests.yml
bindings/: CMakeLists.txt  rvc_module.cpp
docs/: CONTRIBUTING.md
include/rvc/: MovementManager.hpp  ObstacleSensorSubject.hpp  avoiding_state.hpp  cleaning_manager.hpp  cleaning_state.hpp  controller.hpp  default_avoid_strategy.hpp  error_state.hpp  (+15 more)
scripts/: coverage.sh  format.sh  lcov-to-sonar-generic.py  lint.sh  run-cppcheck.sh
simulator/: .gitignore  README.md  pyproject.toml
simulator/rvc_sim/: __init__.py  adapters.py  assertions.py  cli.py  gui.py  headless.py  robot.py  runner.py  rvc.py  scenario.py  types.py  world.py
simulator/rvc_sim/_mock/: __init__.py  _controller.py  _interfaces.py  _managers.py  _states.py  _strategies.py  _subjects.py  _timer.py  _types.py  rvc_compat.py
simulator/scenarios/: 01_basic_cleaning.yaml  02_obstacle_front.yaml  03_left_blocked_then_dust.yaml  03_obstacle_left_blocked.yaml  04_dead_end.yaml  04_right_blocked_then_off.yaml  06_backward_avoidance.yaml  06_init_recoverable.yaml  06_init_retry_then_success.yaml  07_dust_powerup.yaml  07_multi_obstacle.yaml  08_heading_north.yaml  08_obstacle_event_burst.yaml  08_right_blocked_then_off.yaml  09_heading_west.yaml  09_obstacle_dust_simultaneous.yaml  10_heading_south.yaml  10_power_off_during_avoid.yaml  11_obstacle_dust_simultaneous.yaml  11_small_world.yaml  12_init_failure_motor.yaml  12_large_world.yaml  13_init_retry_then_success.yaml  13_l_shaped_room.yaml  14_error_recovery.yaml  14_power_off_mid_cleaning.yaml  15_dust_powerup.yaml  16_dust_sustained_powerup.yaml  16_error_recovery.yaml  16_zero_dust.yaml  17_dust_below_threshold.yaml  18_dust_timer_expiry_at_power_off.yaml  18_pillar.yaml  19_fast_tick.yaml  19_powerup_preserved_through_avoid.yaml  20_nfr02_avoid_500ms.yaml  20_power_off_immediate.yaml  20_power_off_immediately.yaml  21_multi_dust_zone.yaml  22_dust_at_avoidance_endpoint.yaml  (+6 more)
simulator/tests/: conftest.py  test_scenarios.py
src/: CMakeLists.txt  DefaultAvoidStrategy.cpp  MovementManager.cpp  ObstacleSensorSubject,cpp  ObstacleSensorSubject.cpp  avoiding_state.cpp  cleaning_manager.cpp  cleaning_state.cpp  controller.cpp  default_avoid_strategy.cpp  dust_sensor_subject.cpp  error_state.cpp  initializing_state.cpp  main.cpp  movement_manager.cpp  obstacle_sensor_subject.cpp  off_state.cpp  rvc_controller.cpp  timer.cpp
tests/: CMakeLists.txt  test_avoiding_state.cpp  test_cleaning_manager.cpp  test_cleaning_state.cpp  test_controller.cpp  test_default_avoid_strategy.cpp  test_device_interfaces.cpp  test_dust_sensor_subject.cpp  test_error_state.cpp  test_initializing_state.cpp  test_movement_manager.cpp  test_obstacle_sensor.cpp  test_obstacle_sensor_subject.cpp  test_off_state.cpp  test_pattern_interfaces.cpp  test_rvc_controller.cpp  test_timer.cpp
