[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc-sim"
version = "0.1.0"
description = "RVC Controller Simulator with Pygame GUI"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pygame-ce>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
rvc-sim = "rvc_sim.cli:main"

[tool.setuptools.packages.find]
include = ["rvc_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
